# file2array

./: CMakeLists.txt  Doxyfile  README.md
docs/: index.md
src/: CMakeLists.txt
src/file2array/: CMakeLists.txt  exception.hpp  program.cpp  program.hpp  program_args.hpp
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/file2array_gtest/: CMakeLists.txt  main.cpp  program_test.cpp
